# cine_org

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPECIFICATIONS.md  TODO.md  mpv_watcher.ps1  player_profiles.json  pyproject.toml  requirements.txt
.paul/: MILESTONES.md  PROJECT.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md  config.md
.paul/milestones/: v1.2-ROADMAP.md  v1.3-ROADMAP.md  v1.5-ROADMAP.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: cineorg.db
scripts/: regenerate_pending.py  repair_regroup_symlinks.py  test_credits_analyzer.py
src/: __init__.py  config.py  container.py  logging_config.py  main.py  player_profiles.py
src/adapters/: __init__.py  file_system.py
src/core/: __init__.py
src/infrastructure/: __init__.py
src/services/: __init__.py  association_checker.py  cleanup.py  consolidation.py  credits_analyzer.py  enricher.py  imdb_id_enricher.py  importer.py  integrity.py  matcher.py  movies_enricher.py  organizer.py  prefix_grouper.py  quality_scorer.py  ratings_enricher.py  renamer.py  scanner.py  series_enricher.py  symlink_repair.py  transferer.py  validation.py  workflow.py
src/utils/: __init__.py  constants.py  helpers.py
src/web/: app.py  deps.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  tmdb_responses.py  tvdb_responses.py
tests/integration/: __init__.py  test_scanner_integration.py
(+287 files in other folders)
